--- a/main.html
+++ b/main.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Create Table</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<html>
+  <button onclick="createTable()">Create the table</button>
+  <br><br>
+  <table id="myTable" border="1"></table>
 
-	<head>
-		<meta charset=utf-8 /> 
-		<title>Create a table</title> 
-		<style type="text/css"> 
-			body {margin: 30px;} 	
-		</style>
-		<link rel="stylesheet" href="styles.css">
-	</head>
-
-	<body>
-		<table id="myTable" border="1"> 
-		</table>
-		<form> 
-			<input type="button" onclick="createTable()" value="Create the table"> 
-		</form>
-		<script type="text/javascript" src="./script.js">
-	</script>
-
-	</body>
-
+  <script src="script.js"></script>
+</body>
 </html>
