--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <button onclick="createTable()">Create the table</button>
+  <input type="button" value="Create the table" onclick="createTable()" />
   <br><br>
   <table id="myTable" border="1"></table>
 
